--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                 Woah! That looks kinda funky! Do I need to remember how to format this? Luckily not! Linux has this super cool feature called tab complete.
             </p>
             <p>
-                what tab complete does is search for files or folders in the dierectory that you are currently in and try and match the name as best as possible. So try typing:
+                What tab complete does is search for files or folders in the dierectory that you are currently in and try and match the name as best as possible. So try typing:
             </p>
             <pre id="codeBlocks">
                 <code>
@@ -149,7 +149,7 @@
                 </code> 
             </pre>
             <p> 
-                And now press space. It will complete it all for you! Sweet! 
+                And now press tab. It will complete it all for you! Sweet! 
             </p>
             <p>Submitting the command one of these two ways will get you the next password and we are on our way to level 3!</p>
         </div>
