--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 $ cat this file
                 </code> 
             </pre>
-            <p>Would be asking the computer to:
+            <p>Would be asking the computer to:<br>
                 -cat the file: this<br>
                 -cat the file: file<br>
                 So the error we will get with this is telling us that the file name we put in to cat does not exist. As all of these treated as seperate file names and are thus not valid names of things that we can cat.
