--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 <body>
     <h1>Welcome to Wire Runner!</h1>
-    <div id="wireRunner">
-        <img src="wirerunner.gif" height="150px"/> 
-    </div>
+ 
+        <img src="wirerunner.gif"  id="wireRunner" height="150px"/> 
+
     <p style="text-align: center;">Here you will find your guide to and explenation of Over The Wire challanges.</p>
 
     <button class="accordion">Bandit  +</button>
