--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
  
         <img src="wirerunner.gif"  id="wireRunner" height="150px"/> 
 
-    <p style="text-align: center;">Here you will find your guide to and explenation of Over The Wire challanges.</p>
+    <p style="text-align: center;">Here you will find your guide to and explenation of Over The Wire challanges. All commands are run from the Linux bash terminal.</p>
 
     <button class="accordion">Bandit  +</button>
     <div class="panel">
@@ -157,7 +157,31 @@
 
         <button class="accordion">Bandit  3</button>
         <div class="panel">
-            <p>Lorem ipsum</p>
+            <p>Cool. Now we are in level 3. In this level our password is in a hidden file in a folder.</p>
+            <p>First, let's find our folder. How do we do this in the text based terminal Matrix? We use the command: </p>
+            <pre id="codeBlocks">
+                <code>
+                $ ls
+                </code> 
+            </pre>
+            <p>Well... what does this do? Simple, it just LiSts everything in the directory that you are currently in. We will then see a directory named: inhere</p>
+            <p>Well how do we get into "inhere" We use this command:</p>
+            <pre id="codeBlocks">
+                <code>
+                $ cd inhere
+                </code> 
+            </pre>
+            <p>This means Change Directory and is a command you will use so much that you will feel like a CD with only one song on it.</p>
+            <p>New directory, new files and directories to find. ls time! What? Huh? ls didn't work? Or the directory is empty? Did I and over the wire just lie to you?</p>
+            <p>Now we get to hidden files and folders. How do we see those? We use the command:</p>
+            <pre id="codeBlocks">
+                <code>
+                $ ls -la
+                </code> 
+            </pre>
+            <p>This will list every thing in a long format (gets you extra juicy details) and will list all of the files and directories. These can be spotted with the "." (dot) that the file or directory name starts with. In this case the file with the name ".hidden" .</p>
+            <p>Why the naming convention? Not sure really. Someone just decided that's the way (ah-ha ah-ha) they like it.</p>
+            <p>Any way you can now just cat the hidden file (be sure to include the period in the name) and you can read the password for the next level. See you in the 4th dimension!</p>
         </div>
 
 
