--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
         <div class="panel">
             <p>So, we have made it to level 5 and now we get to start putting a lot of things together. In this challenge our file is one of many files in one of many folders, and has quite a few properties.</p>
             <p>
-                It is human-readable, 1033 bytes in size and not executable. The only one we really care about is the file size. How are we going to find this file without going through each file?
+                It is human-readable, 1033 bytes in size and not executable. The only one we really care about is the file size. How are we going to find this file without going through each file and directory?
             </p>
             <p>
                 Easy, Linux has a <b>find</b> command. Find works by default by starting from the directory you run it in and going down all the<pre id="codeBlocks">
