add level 6 walkthrough

--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
                 </code> 
             </pre>
             <p>
-                Looks kinda familiar... right? Let's look at what every part of that... incantation. We have used <b>find</b> so we know what that does. What's the  <b>/</b> doing? Well remember when I said that find works by search from where you are and down the directory tree? Here we are telling find where to start from. The / is a way of declaring the root of the directory tree, so it will search through <i>everything</i>... the whole system. At least everything your user has permission to access. More on that in a bit.
+                Looks kinda familiar... right? Let's look at what every part of that... incantation means. We have used <b>find</b> so we know what that does. What's the  <b>/</b> doing? Well remember when I said that find works by search from where you are and down the directory tree? Here we are telling find where to start from. The / is a way of declaring the root of the directory tree, so it will search through <i>everything</i>... the whole system. At least everything your user has permission to access. More on that in a bit.
             </p>
             <p>
                 <b>size</b> we touched on, this just lets us specify how big the thing we want to find is.
