--- a/index.html
+++ b/index.html
@@ -421,9 +421,9 @@
             </p>
             <p>
                 So a few strings that would match that search query would be:<br>
-                - 0qDf
-                - 9zdf
-                - 7bdf
+                - 0qDf<br>
+                - 9zdf<br>
+                - 7bdf<br>
             </p>
             <p>
                 Wow, that... was a lot and we haven't even done anything with bandit. But now that you have a very basic idea of grep and how it can be a text based super power. We can work on the challenge.
