--- a/index.html
+++ b/index.html
@@ -97,7 +97,9 @@
                 Well how do we get around this? We would need to tell cat to interpret this as a file name. To do this we need to use a special character combination in linux:
             </p>
             <pre id="codeBlocks"> 
+                <code>
                 $ ./ 
+                </code>
             </pre>
             <p>
                 Well that looks really weird... what does it do? In linux this is a way to tell a command, or anything almost that "Hey, I want to to look for or do this thing in the directory that we currently are." Directories are the same thing as folders on Windows.
