make style changes

--- a/index.html
+++ b/index.html
@@ -97,8 +97,7 @@
                 Well how do we get around this? We would need to tell cat to interpret this as a file name. To do this we need to use a special character combination in linux:
             </p>
             <pre id="codeBlocks"> 
-                <code>
-                $ ./ 
+                <code>$ ./ 
                 </code>
             </pre>
             <p>
